--- a/atelier/templates/index.html
+++ b/atelier/templates/index.html
@@ -1,26 +1,131 @@
 {% load staticfiles %}
-<link rel="stylesheet" type="text/css" href="{% static "css/atelier.css" %}" />
 
-{% if album_list %}
+<!DOCTYPE HTML>
+<!--
+	Parallelism by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Parody Record Atelier</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="{% static "html5up/assets/js/ie/html5shiv.js" %}"></script><![endif]-->
+		<link rel="stylesheet" href="{% static "html5up/assets/css/main.css" %}" />
+		<noscript><link rel="stylesheet" href="{% static "html5up/assets/css/noscript.css" %}" /></noscript>
+		<!--[if lte IE 8]><link rel="stylesheet" href="{% static "html5up/assets/css/ie8.css" %}" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="{% static "html5up/assets/css/ie9.css" %}" /><![endif]-->
+	</head>
+	<body>
 
-    <div id="">
-        Artwork of {{ selected_image_type }}
-    </div>
+		<div id="wrapper">
 
-    {% for album in album_list %}
-        <img src="{{ album.artwork_url }}">
-    {% endfor %}
+			<div id="main">
+				<div id="reel">
 
-{% else %}
-    <p>No artwork of {{ selected_image_type }}.</p>
-{% endif %}
+					<!-- Header Item -->
 
-<div>
-    <ul>
-    {% for image_type in image_type_list %}
-        <li><a href="/atelier/{{ image_type.0 }}/">show artworks of {{ image_type.1 }}</a></li>
-    {% endfor %}
-    </ul>
-</div>
+						<div id="header" class="item" data-width="400">
+							<div class="inner">
+								<h1>Parody<br />
+									Record<br />
+									Atelier</h1>
+								<p>Artworks of {{ selected_image_type }}</p>
+							</div>
+						</div>
 
-<script src="{% static "javascripts/atelier.js" %}" />
+					<!-- Thumb Items -->
+
+						<article class="item thumb" data-width="200">
+							<ul>
+							{% for image_type in image_type_list %}
+								<li><a href="/atelier/{{ image_type.0 }}/">show artworks of {{ image_type.1 }}</a></li>
+							{% endfor %}
+							</ul>
+						</article>
+
+					    {% for album in album_list %}
+						<article class="item thumb" data-width="282">
+							<h2>{{ album.name }}</h2>
+							<a href="{{ album.artwork_url }}" class="image"><img src="{{ album.artwork_url }}" alt=""></a>
+						</article>
+						{% endfor %}
+
+
+						<article class="item thumb" data-width="282">
+							<h2>You really got me</h2>
+							<a href="{% static "html5up/images/fulls/01.jpg" %}" class="image"><img src="{% static "html5up/images/thumbs/01.jpg" %}" alt=""></a>
+						</article>
+
+						<article class="item thumb" data-width="384">
+							<h2>Ad Infinitum</h2>
+							<a href="{% static "html5up/images/fulls/02.jpg" %}" class="image"><img src="{% static "html5up/images/thumbs/02.jpg" %}" alt=""></a>
+						</article>
+
+						<article class="item thumb" data-width="274">
+							<h2>Different.</h2>
+							<a href="{% static "html5up/images/fulls/03.jpg" %}" class="image"><img src="{% static "html5up/images/thumbs/03.jpg" %}" alt=""></a>
+						</article>
+
+						<article class="item thumb" data-width="282">
+							<h2>Elysium</h2>
+							<a href="{% static "html5up/images/fulls/04.jpg" %}" class="image"><img src="{% static "html5up/images/thumbs/04.jpg" %}" alt=""></a>
+						</article>
+
+						<article class="item thumb" data-width="476">
+							<h2>Kingdom of the Wind</h2>
+							<a href="{% static "html5up/images/fulls/05.jpg" %}" class="image"><img src="{% static "html5up/images/thumbs/05.jpg" %}" alt=""></a>
+						</article>
+
+						<article class="item thumb" data-width="232">
+							<h2>The Pursuit</h2>
+							<a href="{% static "html5up/images/fulls/06.jpg" %}" class="image"><img src="{% static "html5up/images/thumbs/06.jpg" %}" alt=""></a>
+						</article>
+
+						<article class="item thumb" data-width="352">
+							<h2>Boundless</h2>
+							<a href="{% static "html5up/images/fulls/07.jpg" %}" class="image"><img src="{% static "html5up/images/thumbs/07.jpg" %}" alt=""></a>
+						</article>
+
+						<article class="item thumb" data-width="348">
+							<h2>The Spectators</h2>
+							<a href="{% static "html5up/images/fulls/08.jpg" %}" class="image"><img src="{% static "html5up/images/thumbs/08.jpg" %}" alt=""></a>
+						</article>
+
+				</div>
+			</div>
+
+			<div id="footer">
+				<div class="left">
+					<p>This is <strong>Parallelism</strong>, a responsive portfolio site template by <a href="http://html5up.net">HTML5 UP</a>. Free for personal<br />
+					and commercial use under the <a href="http://html5up.net/license">Creative Commons Attribution</a> license.</p>
+				</div>
+				<div class="right">
+					<ul class="contact">
+						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+						<li><a href="#" class="icon fa-pinterest"><span class="label">Pinterest</span></a></li>
+						<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</div>
+
+		</div>
+
+		<!-- Scripts -->
+			<script src="{% static "html5up/assets/js/jquery.min.js" %}"></script>
+			<script src="{% static "html5up/assets/js/jquery.poptrox.min.js" %}"></script>
+			<script src="{% static "html5up/assets/js/skel.min.js" %}"></script>
+			<script src="{% static "html5up/assets/js/skel-viewport.min.js" %}"></script>
+			<script src="{% static "html5up/assets/js/util.js" %}"></script>
+			<!--[if lte IE 8]><script src="{% static "html5up/assets/js/ie/respond.min.js" %}"></script><![endif]-->
+			<script src="{% static "html5up/assets/js/main.js" %}"></script>
+
+	</body>
+</html>
