--- a/atelier/templates/class_list_view.html
+++ b/atelier/templates/class_list_view.html
@@ -1,7 +1,32 @@
 {% load staticfiles %}
 
-{% for class in class_list %}
-<div>
-    {{ class.class_id }} {{ class.class_id_number }} {{ class.name }} 
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+<div  class="container">
+
+    <div class="hero-unit">
+        <h1>Class List</h1>
+        <p>Classの一覧です。</p>
+    </div>
+
+    <table class="table table-striped table-bordered table-hover table-condensed">
+        <thead>
+            <tr>
+            <th>#</th>
+            <th>class_id</th>
+            <th>name_jp</th>
+            <th>name</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for class in class_list %}
+                <tr>
+                    <td>{{forloop.counter}}</td>
+                    <td>{{class.class_id}}</td>
+                    <td>{{class.name_jp}}</td>
+                    <td>{{class.name}}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
-{% endfor %}
