--- a/atelier/templates/class_view.html
+++ b/atelier/templates/class_view.html
@@ -1,24 +1,59 @@
 {% load staticfiles %}
 
-<a href="/atelier/classList/">show class list</a>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-<form action="/atelier/class/" method="POST">
-{{ form.as_p }}
-<input type="submit" value="Submit" />
-</form>
+<div  class="container">
 
-{% for class_list in class_lists %}
-<div style="float: left; width: 360px; ">
-<h1>{{ class_list.class.name }}({{ class_list.list|length }})</h1>
-
-	{% for album_artwork_class in class_list.list %}
-	<div>
-		{{ album_artwork_class.album.name }} / {{ album_artwork_class.album.artist.name }}</br>
-		[score] {{ album_artwork_class.score }}</br>
-		[rank] {{ album_artwork_class.score_rank }}</br>
-		<img src="{{ album_artwork_class.album.artwork_url }}" alt="">
+	<div class="hero-unit">
+	    <h1>Class Search</h1>
+	    <p>Classごとの画像を検索します。
+	    Classの一覧は<a href="/atelier/classList/">class list</a>で確認できます。</p>
 	</div>
+
+	<div>
+	<form action="/atelier/class/" method="POST">
+	    <table class="table table-striped table-bordered table-hover table-condensed">
+			<thead>
+				<tr>
+				</tr>
+			</thead>
+	        <tbody>
+				{% for field in form %}
+	            <tr><th>{{ field.label }}</th><td>{{ field }}</td></tr>
+				{% endfor %}
+	        </tbody>
+	    </table>
+		<div class="text-center"><input type="submit" value="Search"  class="btn btn-primary btn-lg"/></div>
+	</form>
+	</div>
+
+
+	{% for class_list in class_lists %}
+		<div class="jumbotron">
+			<h2> {{ class_list.class.name_jp }}({{ class_list.list|length }})</h2>
+		</div>
+
+		<div class="row">
+			{% for album_artwork_class in class_list.list %}
+	            <div class="col-lg-3 col-md-3 col-sm-4 col-xs-6">
+					<div class="thumbnail">
+	                	<img src="{{ album_artwork_class.album.artwork_url }}">
+		                <div class="caption">
+		                    <h5>{{ album_artwork_class.album.name }} / {{ album_artwork_class.album.artist.name }}</h5>
+							<p>
+								[score] {{ album_artwork_class.score }}</br>
+								[rank] {{ album_artwork_class.score_rank }}</br>
+						    </p>
+		                    <p><a href="#" class="btn btn-primary btn-sm">score +0.1</a>
+								<a href="#" class="btn btn-danger btn-sm">score -0.1</a></p>
+		                </div>
+					</div>
+	            </div>
+			{% endfor %}
+		</div>
 	{% endfor %}
 
 </div>
-{% endfor %}
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
